fix alignment issue, used tailwind for styling

--- a/src/ocamlorg_frontend/css/styles.css
+++ b/src/ocamlorg_frontend/css/styles.css
@@ -256,6 +256,3 @@ summary::-webkit-details-marker {
   display: none;
 }
 
-.dropdown {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
